# imdb-sentiment-terraform-pyspark-emr

./: .dockerignore  .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  RESULTS.md  STATUS.md  docker-compose.yml  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  security.yml
docs/: ARCHITECTURE.md  DEPLOYMENT.md  ROADMAP.md
docs/adrs/: 0001-iac-tool.md  0002-aws-region.md  0003-emr-deployment-mode.md  0004-no-pii-no-pseudonymisation.md  0005-cost-guardrails.md  0006-containerized-dev-environment.md  0007-sso-state-access.md  0008-emr-service-role-policy.md  0009-versioned-bucket-teardown.md
docs/diagrams/: architecture_diagram.py
infra/: .trivyignore
infra/bootstrap/: .terraform.lock.hcl  config.tf  main.tf  terraform.tfvars.example  variables.tf
infra/data-platform/: .terraform.lock.hcl  config.tf  main.tf  output.tf  terraform.tfvars.example  variables.tf
infra/data-platform/modules/emr/: main.tf  output.tf  security_groups.tf  variables.tf
infra/data-platform/modules/finops/: main.tf  output.tf  variables.tf
infra/data-platform/modules/iam/: main.tf  output.tf  variables.tf
infra/data-platform/modules/s3/: main.tf  variables.tf
infra/data-platform/modules/s3/s3_objects/: main.tf  variables.tf
infra/data-platform/scripts/: backend.conf.example
scripts/: bootstrap_emr.sh  check_no_pt_br.py  empty_versioned_bucket.sh  ingest_data.py
src/pipeline/: __init__.py  config.py  logging_setup.py  main.py  ml.py  processing.py  s3_io.py
tests/: conftest.py  test_config.py  test_ingest.py  test_ml.py  test_processing.py  test_s3_io.py
