[project]
name = "imdb-sentiment-terraform-pyspark-emr"
version = "0.2.0"
description = "Distributed sentiment analysis pipeline for IMDB reviews on AWS EMR, provisioned via Terraform."
readme = "README.md"
requires-python = ">=3.11,<3.12"
license = { text = "MIT" }
authors = [
    { name = "mzanferrari" },
]
keywords = ["data-engineering", "pyspark", "emr", "terraform", "aws", "iac", "finops"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Information Analysis",
]

dependencies = [
    # Runtime - used on the EMR cluster and locally
    "pyspark>=3.5,<4.0",
    # numpy is an implicit pyspark.ml dependency (LogisticRegression, Vectors);
    # pyspark declares it optional, but this project's ML code requires it.
    "numpy>=1.26,<2.0",
    "boto3>=1.34,<2.0",
    "botocore>=1.34,<2.0",
    # Download the dataset
    "requests>=2.31,<3.0",
    "tqdm>=4.66",
]

[project.optional-dependencies]
dev = [
    # Lint + format
    "ruff>=0.15,<0.16",
    # Type checking
    "mypy>=1.10",
    "types-requests",
    "types-tqdm",
    "boto3-stubs[s3,ssm,emr]>=1.34",
    # Tests
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-mock>=3.12",
    # Pre-commit
    "pre-commit>=3.7",
    # Data quality (optional, future)
    # "great-expectations>=0.18",
]

docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
    "mkdocs-mermaid2-plugin>=1.1",
]

[project.urls]
Homepage = "https://github.com/mzanferrari/imdb-sentiment-terraform-pyspark-emr"
Repository = "https://github.com/mzanferrari/imdb-sentiment-terraform-pyspark-emr"
Issues = "https://github.com/mzanferrari/imdb-sentiment-terraform-pyspark-emr/issues"

# ─── BUILD SYSTEM ─────────────────────────────────────────────────────────────
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pipeline"]

# ─── UV - MODERN PYTHON PACKAGE MANAGER (RECOMMENDED) ─────────────────────────
[tool.uv]
# Lock file is generated as uv.lock; commit it for reproducible builds.

# ─── RUFF - LINTER + FORMATTER ────────────────────────────────────────────────
# Replaces black + isort + flake8 + pyupgrade.
[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = [
    ".venv",
    "venv",
    "build",
    "dist",
    "data",
    "docs",
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "N",      # pep8-naming
    "SIM",    # flake8-simplify
    "RUF",    # ruff-specific
    "ERA",    # eradicate (dead code)
    "PL",     # pylint subset
    "PTH",    # use pathlib
    "T20",    # flake8-print (catches stray print)
    "TC",     # flake8-type-checking
    "ASYNC",  # flake8-async
    "S",      # flake8-bandit (security)
]
ignore = [
    "S101",   # use of assert - fine in tests
    "PLR0913", # too many arguments - Spark callbacks legitimately take many
    "PLR2004", # magic value comparison - common in ML
    "T201",   # allow print in scripts/ingest_data.py
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "PLR2004", "S106", "TC002", "TC003"]
"scripts/**/*.py" = ["T201", "T203"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[tool.ruff.lint.isort]
known-first-party = ["pipeline"]
combine-as-imports = true

# ─── MYPY - TYPE CHECKER ──────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
show_error_codes = true
show_column_numbers = true
pretty = true

[[tool.mypy.overrides]]
module = [
    "pyspark.*",
    "py4j.*",
]
ignore_missing_imports = true

# ─── PYTEST ───────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-ra",
    # Fast suite by default (PR CI). The slow ML training test trains a real
    # CrossValidator (~50s) and guards against environment drift, not code
    # regression; run it on demand with `pytest -m slow` or via the nightly
    # workflow. See docs/ROADMAP.md.
    "-m", "not slow",
    "--strict-markers",
    "--strict-config",
    "--showlocals",
    "--tb=short",
    "--cov=src/pipeline",
    "--cov-branch",
    "--cov-report=term-missing:skip-covered",
    "--cov-report=xml",
    "--cov-fail-under=40",       # start low, raise as coverage grows
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks integration tests (require AWS or Docker)",
    "spark: marks tests that need a SparkSession",
]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning:pyspark.*",
    "ignore::PendingDeprecationWarning",
    # PySpark leaves the py4j socket to the JVM unclosed on session teardown;
    # the ResourceWarning is a known PySpark cleanup artifact, not a test bug.
    "ignore:unclosed:ResourceWarning",
]

[tool.coverage.run]
branch = true
source = ["src/pipeline"]
omit = ["*/tests/*", "*/__init__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
